tests/positive/rule5_temperature.safe
-- Test: rule5_temperature
-- Description: Temperature conversion with no NaN/infinity at narrowing.
--   Converts Celsius to Fahrenheit. Inputs are bounded, so the
--   arithmetic cannot produce NaN or infinity, and the result fits
--   in the output type at every narrowing point.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139b:5e20032b
-- Expected: ACCEPT

package temperature_conv

   type celsius is digits 6 range -273.15 to 1000.0
   type fahrenheit is digits 6 range -459.67 to 1832.0

   --  To_Fahrenheit: C * 9.0/5.0 + 32.0
   --  Input range: -273.15 .. 1000.0
   --  C * 9.0/5.0 range: -491.67 .. 1800.0
   --  Result range: -459.67 .. 1832.0, fits in Fahrenheit.
   --  No intermediate can be NaN or infinity (bounded inputs, nonzero divisor).
   function to_fahrenheit (c : celsius) returns fahrenheit

      --  Narrowing point (return): result is finite and in Fahrenheit range.
      return fahrenheit (long_float (c) * 9.0 / 5.0 + 32.0)

   --  To_Celsius: (F - 32.0) * 5.0 / 9.0
   --  9.0 is a nonzero literal, so no division by zero.
   function to_celsius (f : fahrenheit) returns celsius

      return celsius ((long_float (f) - 32.0) * 5.0 / 9.0)

