tests/negative/neg_rule5_div_zero.safe
-- Test: neg_rule5_div_zero
-- Description: Floating-point division by zero producing infinity at narrowing.
--   Divides by a variable that may be 0.0 (not provably nonzero).
--   The resulting infinity cannot survive narrowing.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139:d50bc714
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.5.p139d:56f1f36b
-- Expected: REJECT fp_division_by_zero

package fp_div_zero_test

   type measurement is digits 6 range -1000.0 to 1000.0;

   --  Normalize: divides Value by Scale without checking Scale != 0.0.
   --  If Scale is 0.0, the result is +/- infinity (IEEE 754).
   --  Infinity cannot survive the narrowing to Measurement.
   function normalize (value : measurement;
                       scale : measurement) returns measurement

      return measurement (long_float (value) / long_float (scale));
      -- ERROR: Scale may be 0.0, yielding infinity



